# Mammoth2

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  ObstacleCrossing.cpp  SlopEsimation.cpp
base/: base.cmake  core.hpp  preprocess.hpp
dependencies/: dependencies.cmake  pcap_header.h  pcl_header.h  std_header.h
extras/: extras.cmake
extras/pointviewer/include/: glviewer.h  mviewer.hpp
extras/pointviewer/lib/: PtVisualizer.lib
extras/threadholder/include/: mthread.hpp
samples/: CMakeLists.txt  sample1.cpp  sample2.cpp  sample3.cpp  sample4.cpp  sample5.cpp  samples.cpp
sensors/: lidar.hpp  mlidar.hpp  sensors.cmake
tests/: CMakeLists.txt  test.cpp
utils/: pcap_util.hpp  time_util.hpp
